# redditmine

./: README.md
redditmine/: README.md  pyproject.toml
redditmine/src/crew/: crew.py  main.py
redditmine/src/crew/config/: agents.yaml  tasks.yaml
redditmine/src/crew/tools/: custom_tool.py
