[tool.poetry]
name = "crew"
version = "0.1.0"
description = "crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
flask-cors = "^5.0.0"

[tool.poetry.scripts]
crew = "crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"